--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <logback.version>1.0.13</logback.version>
 
         <guava.version>18.0</guava.version>
-        <freemarker.version>2.3.20</freemarker.version>
+        <freemarker.version>2.3.25-incubating</freemarker.version>
         <commons-collections4.version>4.1</commons-collections4.version>
         <commons-lang3.version>3.4</commons-lang3.version>
         <mysql-connector-java.version>5.1.34</mysql-connector-java.version>
